[package]
name = "heroku-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tera = ["tera_"]
handlebars = ["handlebars_"]

[dependencies]
glob = "0.3.1"
normpath = "1.1.1"
notify = "6.0.1"
rocket = "0.5.0-rc.2"


[dependencies.rocket_dyn_templates]
path = "./dyn_templates"
features = ["tera", "handlebars"]

[dependencies.tera_]
package = "tera"
version = "1.10.0"
optional = true

[dependencies.handlebars_]
package = "handlebars"
version = "4.1"
optional = true

[package.metadata.docs.rs]
all-features = true
